<resources>
    <string name="app_name">eBhoot</string>
    <string name="search">Search</string>
    <string name="more">More</string>
    <string name="cart">Cart</string>
    <string name="title">eBhoot Electronics</string>
    <string name="category">Categories</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="support">Support</string>
    <string name="welcome">Welcome to</string>
    <string name="searchbar_hint">Search…</string>
    <string name="content_cart">Add To Cart</string>
    <string name="label">Password</string>
    <string name="label_email">Email</string>
    <string name="label_name">Full Name</string>
    <string name="label_user">Username/Email</string>
    <string name="login_btn">Login</string>
    <string name="ebhoot_electronics">eBhoot Electronics</string>
    <string name="greet_login">Welcome back! Sign in to your account.</string>
    <string name="forget">Lost your password?</string>
    <string name="resister">Register</string>
    <string name="new_login">New to eBhoot?</string>
    <string name="login_success">Login successful</string>
    <string name="login_failed">Login failed</string>
    <string name="set_pass">A link to set a new password will be sent to your email address.</string>
    <string name="privacy_register">Your personal data will be used to support your experience throughout this website, to manage access to your account, and for other purposes described in our privacy policy.</string>
    <string name="back_to_login">Return to Login</string>
    <string name="consumer_key">ck_771372bfbe9e113110977205b03f66fc41850dce</string>
    <string name="consumer_secret">cs_be7ea351942a074cd23073e0af896d3517511542</string>
    <string name="consumer_key_r">ck_0af557bf3914ead4b5c439d3e1b79cf5ce4b894e</string>
    <string name="consumer_secret_r">cs_7809f076e009feafb63b4a7b77c7a634dc419261</string>
<!--    <string name="consumer_key_r">ck_12be117f09542d79dc2cf688481e8b3004cba243</string>-->
<!--    <string name="consumer_secret_r">cs_baa5ba2b8342d210437657f2a757b059319797ee</string>-->

    <string name="settings">Settings</string>
    <string name="track_your_order">Track Orders</string>
    <string name="orders">Orders</string>
    <string name="description_order">Track and view your orders</string>
    <string name="dashboard">Dashboard</string>
    <string name="html">
        hello&#9249;hello
    </string>
    <string name="description_address">Manage your addresses</string>
    <string name="addresses">Addresses</string>
    <string name="description_account">Manage your account information</string>
    <string name="account">Account Detailes</string>
    <string name="name_surename">Name Surename</string>
    <string name="username_placeholder">username</string>
    <string name="log_in_to_continue">Please log in to continue</string>
    <string name="avatar">avatar</string>
    <string name="name_surname">Name Surname</string>
    <string name="logout">Logout</string>
    <string name="price">₹118</string>
    <string name="product_name">Product Name</string>
    <string name="category_name">Category Name</string>
    <string name="featured_products">Featured Products</string>
    <string name="on_sale_products">Products On Sale</string>
    <string name="loadmore">Load More</string>
    <string name="looking_for_something_special">Looking for something specific?</string>
    <string name="browse_through_all_products">Product Catalog</string>
    <string name="gst">\ \@GST</string>
    <string name="rupee">₹</string>
    <string name="product_image">Product Image</string>
    <string name="scroll_up">Scroll Up</string>
    <string name="order_by">Sort by</string>
    <string name="date_sort">Date: Newest to oldest</string>
    <string name="date_sort_2">Date: Oldest to newest</string>
    <string name="title_sort">Title: A to Z</string>
    <string name="title_sort_2">Title: Z to A</string>
    <string name="price_sort">Price: Lowest to highest</string>
    <string name="price_sort_2">Price: Highest to lowest</string>
    <string name="rating_sort">Rating: High to low</string>
    <string name="popularity_sort_2">Popularity: High to Low</string>
    <string name="subcategory">Subcategories</string>
    <string name="products">Products</string>
    <string name="rs">Rs.</string>
    <string name="price_2">177</string>
    <string name="description">Description</string>

</resources>