<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
        <item
            android:id="@+id/item_1"
            android:enabled="true"

            android:icon="@drawable/home_24"
            android:title="@string/home" />
        <item
            android:id="@+id/item_2"
            android:enabled="true"
            android:icon="@drawable/category_24"
            android:title="@string/category"/>

        <item
            android:id="@+id/item_3"
            android:enabled="true"
            android:icon="@drawable/person_24"
            android:title="@string/profile"/>

        <item
            android:id="@+id/item_5"
            android:enabled="true"
            android:icon="@drawable/steppers_24"
            android:title="@string/more"/>
</menu>