<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="32dp"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image_login"
        android:layout_width="200dp"
        android:layout_centerHorizontal="true"
        android:scaleType="centerCrop"
        android:layout_height="120dp"
        android:src="@drawable/ic_launcher_foreground"
        android:contentDescription="@string/greet_login" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:id="@+id/ebhoot_name"
        android:layout_below="@id/image_login"
        android:textColor="@color/inv2inv"
        android:textSize="18sp"
        android:text="@string/ebhoot_electronics" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:padding="16dp"
        android:layout_above="@id/email_login"
        android:text="@string/greet_login" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/password_login"
        android:hint="@string/label_user">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_login_text"
            android:layout_width="match_parent"
            android:inputType="textPersonName|textEmailAddress"
            android:maxLines="1"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_login"
        android:layout_width="match_parent"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content"
        android:paddingVertical="16dp"
        app:endIconMode="password_toggle"
        android:hint="@string/label">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_login_text"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:maxLines="1"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:id="@+id/login_btn"
        android:layout_below="@id/password_login"
        app:cornerRadius="5dp"
        android:layout_height="60dp"
        android:text="@string/login_btn" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_below="@id/login_btn"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:textSize="15sp"
        style="@style/Widget.Material3.Button.TextButton"
        android:textAlignment="textStart"
        android:text="@string/forget" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/login_signup"
        android:textAlignment="textStart"
        android:text="@string/new_login"
        android:textSize="15sp"
        android:layout_marginVertical="10dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_signup"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:cornerRadius="5dp"
        android:text="@string/resister"
        style="@style/Widget.Material3.Button.TonalButton"
        android:layout_alignParentBottom="true" />

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progress"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>