<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:paddingBottom="76dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorSurfaceContainerLow">
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_margin="16dp"
        style="@style/Widget.Material3.CardView.Filled"
        android:id="@+id/card_profile"
        android:layout_height="70dp">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:padding="15dp"
            android:src="@drawable/avatar"
            android:contentDescription="@string/avatar" />
        <LinearLayout
            android:layout_marginStart="70dp"
            android:layout_width="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_surname"
            android:textColor="@color/material_on_surface_disabled"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/material_on_surface_disabled"
                android:text="@string/username_placeholder"/>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_gravity="end|center_vertical"
            app:icon="@drawable/baseline_logout_24"
            android:enabled="false"
            android:contentDescription="@string/logout"
            />
    </com.google.android.material.card.MaterialCardView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dashboard_title"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/dashboard"
        android:textStyle="bold"
        android:layout_below="@id/card_profile"/>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_marginHorizontal="16dp"
        android:id="@+id/card2"
        style="@style/Widget.Material3.CardView.Outlined"
        android:layout_below="@id/dashboard_title"
        android:layout_height="70dp">
        <ImageView
            android:layout_width="70dp"
            android:padding="20dp"
            android:src="@drawable/box_24"
            android:layout_height="70dp"
            app:tint="@color/material_on_background_disabled"
            android:contentDescription="@string/orders" />
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_marginStart="70dp"
            android:gravity="center_vertical"
            android:layout_below="@id/card_profile"
            android:layout_height="match_parent">
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/orders"
            android:textColor="@color/material_on_surface_disabled"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/material_on_surface_disabled"
            android:text="@string/description_order"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_margin="16dp"
        style="@style/Widget.Material3.CardView.Outlined"
        android:layout_below="@id/card2"
        android:textColor="@color/material_on_surface_disabled"
        android:id="@+id/card3"
        android:layout_height="70dp">
        <ImageView
            android:layout_width="70dp"
            android:padding="20dp"
            app:tint="@color/material_on_surface_disabled"
            android:src="@drawable/edit_location_alt_24"
            android:layout_height="70dp"
            android:contentDescription="@string/addresses" />
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_marginStart="70dp"
            android:gravity="center_vertical"
            android:layout_below="@id/card_profile"
            android:layout_height="match_parent">
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addresses"
                android:textColor="@color/material_on_surface_disabled"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/material_on_surface_disabled"
                android:text="@string/description_address"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_marginHorizontal="16dp"
        style="@style/Widget.Material3.CardView.Outlined"
        android:layout_below="@id/card3"
        android:id="@+id/card4"
        android:layout_height="70dp">
        <ImageView
            android:contentDescription="@string/account"
            android:layout_width="70dp"
            android:padding="20dp"
            app:tint="@color/material_on_surface_disabled"
            android:src="@drawable/id_card_24"
            android:layout_height="70dp"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_marginStart="70dp"
            android:gravity="center_vertical"
            android:layout_below="@id/card_profile"
            android:layout_height="match_parent">
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/material_on_surface_disabled"
                android:text="@string/account"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/material_on_surface_disabled"
                android:text="@string/description_account"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:layout_width="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:enabled="false"
        android:layout_above="@id/login_bar"
        app:icon="@drawable/local_shipping_24"
        android:text="@string/track_your_order"
        android:layout_height="wrap_content"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:cornerRadius="0dp"
        app:icon="@drawable/baseline_login_24"
        app:iconGravity="end"
        android:textAlignment="textStart"
        android:text="@string/log_in_to_continue"
        style="@style/Widget.Material3.Button.Icon"
        android:layout_alignParentBottom="true"
        />
</RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
