<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="32dp"
    android:layout_height="match_parent">
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_reg_text"
            android:layout_width="match_parent"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/text_reg0"
        android:layout_marginVertical="10dp"
        android:layout_below="@id/email_register"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:textColor="?attr/colorPrimary"
        android:text="@string/set_pass"/>
    <TextView
        android:id="@+id/text_reg1"
        android:layout_below="@id/text_reg0"
        android:layout_width="match_parent"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:text="@string/privacy_register"/>
    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="0dp"
        android:id="@+id/reg_pp"
        android:layout_below="@id/text_reg1"
        style="@style/Widget.Material3.Button.TextButton"
        android:text="Read Our Privacy Policy"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:id="@+id/reg_btn"
        android:layout_height="60dp"
        android:layout_below="@id/reg_pp"
        android:text="@string/resister"
        app:cornerRadius="5dp"/>
    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:id="@+id/back_to_login"
        app:cornerRadius="5dp"
        android:layout_below="@id/reg_btn"
        android:layout_height="60dp"
        style="@style/Widget.Material3.Button.TonalButton"
        app:icon="@drawable/baseline_arrow_back_24"
        app:iconGravity="textStart"
        android:textAlignment="textStart"
        android:text="@string/back_to_login"/>
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/progress_reg"
        android:layout_centerInParent="true"/>
</RelativeLayout>