<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:id="@+id/layout_cate"
    android:layout_height="match_parent">
<!--     NestedScrollingChild goes here (NestedScrollView, RecyclerView, etc.). -->

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:id="@+id/appBarLayout"
        android:fitsSystemWindows="true"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:background="?attr/colorSurfaceContainer"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|enterAlways">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/material_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:iconGravity="textTop"
                android:layout_marginEnd="15dp"
                style="@style/Widget.Material3.Button"
                android:text="@string/cart"
                android:layout_gravity="end"

                app:icon="@drawable/shopping_cart_24"
                android:contentDescription="@string/content_cart" >

            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.search.SearchBar
                android:id="@+id/search_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/searchbar_hint" />
        </com.google.android.material.appbar.MaterialToolbar>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:background="?attr/colorSurfaceContainer"
            app:layout_scrollFlags="enterAlways"
            >
            <com.google.android.material.chip.ChipGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
            app:singleLine="true">
                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:chipIcon="@drawable/baseline_sort_24"
                    app:chipIconTint="?android:attr/textColorSecondary"
                    android:checkable="true"
                    android:text="@string/order_by"/>
                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:chipIcon="@drawable/category_24"
                    android:checkable="true"
                    app:chipIconTint="?android:attr/textColorSecondary"
                    android:text="@string/category"/>
        </com.google.android.material.chip.ChipGroup>
        </HorizontalScrollView>
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:id="@+id/error_nic"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <TextView
            android:id="@+id/nic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/rty"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="@string/no_internet_connection"
            android:textSize="18sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/rty"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Retry"
            android:textStyle="bold"
            app:icon="@drawable/baseline_refresh_24" />
    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            android:orientation="vertical">
            <!-- Screen content goes here. -->


<androidx.recyclerview.widget.RecyclerView
    android:layout_width="match_parent"
    android:id="@+id/sub_categories"
    android:layout_marginBottom="76dp"
    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
    android:layout_height="wrap_content"/>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
    <com.google.android.material.search.SearchView
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/searchbar_hint"
        app:layout_anchor="@id/search_bar">
        <!-- Search suggestions/results go here (ScrollView, RecyclerView, etc.). -->
    </com.google.android.material.search.SearchView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>